--- a/main.html
+++ b/main.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clickable Solar System</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <h1>Solar System</h1>
+    <img src="solarsystem.jpg" alt="Solar System" usemap="#solarsystemmap" />
+    <map name="solarsystemmap">
+        <!-- Define areas for planets -->
+        <area shape="circle" coords="100,200,10" href="mercury.htm" alt="Mercury">
+        <area shape="circle" coords="180,220,15" href="venus.htm" alt="Venus">
+        <area shape="circle" coords="250,250,20" href="earth.htm" alt="Earth">
+        <area shape="circle" coords="330,280,18" href="mars.htm" alt="Mars">
+        <area shape="circle" coords="420,310,25" href="jupiter.htm" alt="Jupiter">
+        <area shape="circle" coords="530,330,22" href="saturn.htm" alt="Saturn">
+        <area shape="circle" coords="630,340,8" href="uranus.htm" alt="Uranus">
+        <area shape="circle" coords="720,345,6" href="neptune.htm" alt="Neptune">
+        <area shape="circle" coords="810,340,5" href="pluto.htm" alt="Pluto">
+        
+        <!-- Define area for the Sun -->
+        <area shape="rect" coords="50,50,150,150" href="sun.htm" alt="Sun">
+    </map>
 </body>
-
 </html>
