--- a/main.html
+++ b/main.html
@@ -1,34 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Clickable Solar System</title>
+	<title>Planet Maps</title>
 </head>
 <body>
-    <h1>Solar System</h1>
-    <img src="solarsystem.jpg" alt="Solar System" usemap="#solarsystemmap" />
-    <map name="solarsystemmap">
-        <!-- Mercury -->
-        <area shape="circle" coords="100,200,10" href="mercury.htm" alt="Mercury">
-        <!-- Venus -->
-        <area shape="circle" coords="180,220,15" href="venus.htm" alt="Venus">
-        <!-- Earth -->
-        <area shape="circle" coords="250,250,20" href="earth.htm" alt="Earth">
-        <!-- Mars -->
-        <area shape="circle" coords="330,280,18" href="mars.htm" alt="Mars">
-        <!-- Jupiter -->
-        <area shape="circle" coords="420,310,25" href="jupiter.htm" alt="Jupiter">
-        <!-- Saturn -->
-        <area shape="circle" coords="530,330,22" href="saturn.htm" alt="Saturn">
-        <!-- Uranus -->
-        <area shape="circle" coords="630,340,8" href="uranus.htm" alt="Uranus">
-        <!-- Neptune -->
-        <area shape="circle" coords="720,345,6" href="neptune.htm" alt="Neptune">
-        <!-- Pluto -->
-        <area shape="circle" coords="810,340,5" href="pluto.htm" alt="Pluto">
-        
-        <!-- Sun -->
-        <area shape="rect" coords="50,50,150,150" href="sun.htm" alt="Sun">
-    </map>
+	<h1>Planet Maps</h1>
+	<img src="planet-map.jpg" usemap="#planet-map" alt="Planet Map">
+	<map name="planet-map">
+		<area shape="rect" coords="50,50,100,100" href="https://en.wikipedia.org/wiki/Sun">
+		<area shape="circle" coords="150,100,30" href="https://en.wikipedia.org/wiki/Mercury_(planet)">
+		<area shape="circle" coords="220,100,30" href="https://en.wikipedia.org/wiki/Venus">
+		<area shape="circle" coords="290,100,30" href="https://en.wikipedia.org/wiki/Earth">
+		<area shape="circle" coords="360,100,30" href="https://en.wikipedia.org/wiki/Mars">
+		<area shape="circle" coords="430,100,30" href="https://en.wikipedia.org/wiki/Jupiter">
+		<area shape="circle" coords="500,100,30" href="https://en.wikipedia.org/wiki/Saturn">
+		<area shape="circle" coords="570,100,30" href="https://en.wikipedia.org/wiki/Uranus">
+		<area shape="circle" coords="640,100,30" href="https://en.wikipedia.org/wiki/Neptune">
+		<area shape="circle" coords="710,100,30" href="https://en.wikipedia.org/wiki/Pluto">
+		<area shape="circle" coords="780,100,30" href="https://en.wikipedia.org/wiki/Ceres_(dwarf_planet)">
+		<area shape="circle" coords="850,100,30" href="https://en.wikipedia.org/wiki/Eris_(dwarf_planet)">
+	</map>
 </body>
 </html>
